# home-assistant-area-lighting

./: .gitignore  .gitlab-ci.yml  .tool-versions  CHANGELOG.md  CLAUDE.md  CONFIGURATION.md  CONTRIBUTING.md  README.md  TODO.md  dagger.json  hacs.json  pyproject.toml
.github/workflows/: ci.yml  release.yaml
custom_components/area_lighting/: __init__.py  alert.py  area_state.py  binary_sensor.py  circadian_kelvin_router.py  cluster_dispatch.py  config_schema.py  conftest.py  const.py  controller.py  diagnostics.py  event_handlers.py  manifest.json  models.py  motion_condition.py  number.py  scene.py  scene_machine.py  scene_storage.py  select.py  services.py  services.yaml  state_storage.py  strings.json  switch.py  timer_manager.py
custom_components/area_lighting/tests/: README.md  test_alert.py  test_alert_config.py  test_area_state.py  test_circadian_kelvin_router.py  test_circadian_kelvin_routes_schema.py  test_cluster_dispatch.py  test_favorite_override.py  test_leader_follower_controller.py  test_leader_follower_schema.py  test_light_none_attr_filter.py  test_motion_condition.py  test_motion_condition_schema.py  test_scene_entities_schema.py  test_scene_machine.py  test_startup_reconcile.py  test_state_matches_scene_target.py  test_timer_manager.py  test_translations.py
custom_components/area_lighting/translations/: en.json
dagger/: go.mod  main.go  version.go
docs/superpowers/plans/: 2026-04-16-alert-mode.md  2026-04-16-occupancy-timeout-switch.md  2026-04-17-github-release-publishing.md  2026-05-17-circadian-kelvin-routes.md  2026-06-09-scene-self-healing.md
docs/superpowers/specs/: 2026-04-16-alert-mode-design.md  2026-04-16-occupancy-timeout-switch-design.md  2026-04-17-favorite-button-cycle-override-design.md  2026-06-09-scene-self-healing-design.md  (+2 more)
hooks/: commit-msg
(+39 files in other folders)
